# liloo

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py  test.py
cmake/: libliloo-config.cmake
include/: core.h
include/liloo/: core.h
liloo/: __init__.py  core.cpp  liloo.cpp  liloo.py
test_module/: CMakeLists.txt  Makefile  test_module.cpp  test_module.py
